--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 # Starter pipeline
+- task: Ant@1
+  inputs:
+    buildFile: 'build.xml'
+    options: 
+    publishJUnitResults: true
+    testResultsFiles: '**/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
 - task: Npm@1
   inputs:
     command: 'install'
